--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,3 +18,4 @@ guava = { module = "com.google.guava:guava", version = "33.1.0-jre" }
 jspecify = { module = "org.jspecify:jspecify", version = "0.3.0" }
 mavenRepositoryMetadata = { module = "org.apache.maven:maven-repository-metadata", version = "3.9.6" }
 stylecheck = { module = "ca.stellardrift:stylecheck", version = "0.2.1" }
+jSemver = { module = "com.vdurmont:semver4j", version = "3.1.0" }
